# masf-harness

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  spike.py
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-05-30-harness-foundation.md  2026-05-30-harness-phase2a-tools.md  2026-05-30-harness-phase2b-agent.md  2026-05-30-harness-phase2d-web.md  2026-06-03-maf-composable-harness.md  2026-06-10-agui-adapter.md  2026-06-10-container-sandbox.md  2026-06-10-harness-phase2d-docs.md  2026-06-10-mcp-status-capture.md  2026-06-10-tool-status-updates.md  2026-06-11-session-lifecycle.md
docs/superpowers/specs/: 2026-05-30-data-integration-harness-design.md  2026-05-30-web-and-document-ingestion-design.md  2026-05-30-web-research-capability-spec.md  2026-06-03-maf-composable-harness-design.md  2026-06-10-agui-adapter-design.md  2026-06-10-container-sandbox-design.md  2026-06-10-mcp-status-capture-design.md  2026-06-10-tool-status-updates-design.md  2026-06-11-session-lifecycle-design.md
evals/: run_evals.py
examples/: agui_server.py
examples/copilotkit/: README.md
examples/copilotkit/backend/: mcp_server.py  server.py
examples/copilotkit/frontend/: package-lock.json  package.json
examples/copilotkit/frontend/app/: layout.tsx  page.tsx  providers.tsx
examples/copilotkit/frontend/app/api/copilotkit/: route.ts
harness/: __init__.py  agent.py  agui.py  api.py  bundles.py  cli.py  config.py  container_runtime.py  conversation.py  handles.py  manager.py  mcp_status.py  paths.py  sandbox.py  sandbox_container.py  session.py  spill.py  status.py  testing.py
harness/runtime/: Containerfile  _runner.py  harness_sandbox.py
harness/tools/: __init__.py  code.py  documents.py  fetch.py  files.py  inspect.py  registry.py  search.py  web.py
scripts/: real_mcp_smoke.py
tests/: conftest.py  test_agent_loop.py  test_agui.py  test_agui_live.py  test_api.py  test_bundles.py  test_cli.py  test_config.py  test_container_live.py  test_container_runtime.py  test_conversation.py  test_documents.py  test_handles.py  test_live.py  test_live_documents.py  test_live_web.py  test_manager.py  test_mcp_status.py  test_mcp_status_live.py  test_mcp_wiring.py  test_paths.py  test_registry.py  test_sandbox.py  test_sandbox_container.py  test_search_config.py  test_session.py  test_session_create_agent.py  test_spill.py  test_status.py  test_status_instrumentation.py
tests/fixtures/: mcp_progress_server.py
tests/tools/: test_code.py  test_fetch.py  test_files.py  test_inspect.py  test_search.py  test_web.py
tether/: __init__.py  agui.py  api.py  bundles.py  cli.py  config.py  container_runtime.py  conversation.py  handles.py  manager.py  mcp_status.py  sandbox.py  sandbox_container.py  session.py  spill.py  status.py  testing.py
tether/runtime/: Containerfile  _runner.py  tether_sandbox.py
tether/tools/: documents.py  fetch.py
