[project]
name = "harness"
version = "0.1.0"
description = "Data-integration agent harness on Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core",
    "agent-framework-openai",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "trafilatura>=2.0.0",
]

[project.scripts]
harness = "harness.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
# agent-framework-core is a prerelease; pin the mode so `uv run` doesn't re-resolve each call.
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
