[project]
name = "harness"
version = "0.1.0"
description = "Data-integration agent harness on Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=1.8.1",
    "agent-framework-openai>=1.8.1",
    "mcp>=1.27",            # MAF's MCPStdioTool/MCPStreamableHTTPTool need the MCP SDK at runtime
    "pandas>=2.0",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]         # heavy + downloads models; opt-in. Enables read_document.
agui = ["agent-framework-ag-ui>=1.0.0rc4"]

[project.scripts]
harness = "harness.cli:main"
harness-prefetch-docling = "harness.tools.documents:_prefetch_main"
harness-build-sandbox = "harness.container_runtime:_build_sandbox_main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
# agent-framework-core is a prerelease; pin the mode so `uv run` doesn't re-resolve each call.
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
