[project]
name = "tether-harness"
dynamic = ["version"]
description = "Data-integration agent harness on Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jspv", email = "jspvgithub@twinleaf.xyz" }]
keywords = [
    "agent",
    "agents",
    "llm",
    "microsoft-agent-framework",
    "maf",
    "mcp",
    "data-integration",
    "sandbox",
    "ag-ui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "agent-framework-core>=1.8.1",
    "agent-framework-openai>=1.8.1",
    "mcp>=1.27",            # MAF's MCPStdioTool/MCPStreamableHTTPTool need the MCP SDK at runtime
    "pandas>=2.0",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]         # heavy + downloads models; opt-in. Enables read_document.
agui = ["agent-framework-ag-ui>=1.0.0rc4"]

[project.urls]
Homepage = "https://github.com/jspv/tether"
Repository = "https://github.com/jspv/tether"
Issues = "https://github.com/jspv/tether/issues"

[project.scripts]
tether = "tether.cli:main"
tether-prefetch-docling = "tether.tools.documents:_prefetch_main"
tether-build-sandbox = "tether.container_runtime:_build_sandbox_main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
# agent-framework-core is a prerelease; pin the mode so `uv run` doesn't re-resolve each call.
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.version]
path = "tether/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tether"]

[tool.hatch.build.targets.sdist]
# Ship only the package; hatchling always adds the metadata files (README, LICENSE,
# pyproject). This keeps dev cruft out of the sdist — spike script, scratch workspaces,
# eval runs, internal design notes, and the examples' node_modules.
only-include = ["tether"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
